--- a/00-projekt.tex
+++ b/00-projekt.tex
@@ -11,7 +11,7 @@
 % hlavička 
 % příkaz logo - vkládá logo fakulty dle zvoleného jazyka
 \title{\logo\\IEL -- protokol k projektu}
-\author{Jméno, příjmení \\ login}
+\author{Vojtěch, Šišma \\ xsisma02}
 \date{\today} % today - dnešní datum
 
 \begin{document}
