--- a/01-pr1.tex
+++ b/01-pr1.tex
@@ -11,36 +11,6 @@
 (0,3) to[dcvsource, v_=$U_2$](0,0)
 (0,7) -- (1,7)
 (1,7) to[R ,l_=$R_1$](4,7)
-(4,7) -- (4,9)
-(4,9) to[R, l_=$R_2$, i=$I_{R2}$, v=$U_R2$](7,9)
-%(4,9) to [short,i=$I_{R2}$] (4.5,9)
-(7,9) -- (7,7)
-(4,7) to[R, *-*, l_=$R_3$](7,7)
-(4,7) -- (4,5)
-(4,5) to[R, l_=$R_4$](7,5)
-(7,7) to[R, *-*, l_=$R_5$](7,5)
-(7,7) to[R, l_=$R_6$](10,7)
-(4,7) -- (4,5)
-(7,5) to[R, *-*, l_=$R_7$](10,5)
-(10,7) to[R, l_=$R_8$](10,5)
-(10,5) -- (10,0)
-(10,0) -- (0,0)
-;
-
-\end{circuitikz}
-\centering
-\caption{Počáteční obvod}
-\end{figure}
-\clearpage
-
-
-\begin{figure}[h!]
-\begin{circuitikz} \draw
-
-(0,7) to[dcvsource, v_=$U_1$](0,3)
-(0,3) to[dcvsource, v_=$U_2$](0,0)
-(0,7) -- (1,7)
-(1,7) to[R ,l_=$R_1$](4,7)
 (4,7) to[R, *-*, l_=$R_{23}$](7,7)
 (4,7) -- (4,5)
 (4,5) to[R, l_=$R_4$](7,5)
@@ -56,8 +26,14 @@
 \end{circuitikz}
 \centering
 \caption{Zjednodušení $R_2$ a $R_3$}
-\end{figure}
 
+\begin{gather*}
+    R_{23} = \frac{R_{2} \times R_{3}}{R_{2} + R_{3}}  \\
+    R_{23} = \frac{650 \times 410}{650 + 410}  \\
+    R_{23} = 251.4151 \si\ohm
+\end{gather*}
+
+\end{figure}
 
 \begin{figure}[h!]
 \begin{circuitikz} \draw
@@ -70,7 +46,7 @@
 (4,7) -- (4,5)
 (4,5) to[R, l_=$R_4$](7,5)
 (7,7) to[R, *-*, l_=$R_5$](7,5)
-(7,7) to[R, l_=$R_6$](10,7)
+(7,7) to[R, l_=$R_{68}$](10,7)
 (4,7) -- (4,5)
 (7,5) to[R, *-*, l_=$R_7$](10,5)
 (10,7) -- (10,0)
@@ -80,9 +56,14 @@
 \end{circuitikz}
 \centering
 \caption{Zjednodušení $R_6$ a $R_8$}
-\end{figure}
-\clearpage
 
+\begin{gather*}
+    R_{68} = R_6 + R_8 \\
+    R_{68} = 750 + 190 \\
+    R_{68} = 940 \si\ohm
+\end{gather*}
+
+\end{figure}
 
 \begin{figure}[h!]
 \begin{circuitikz} \draw
@@ -94,10 +75,10 @@
 (4,7) to[R, *-, l_=$R_{23}$](7,7)
 (4,7) -- (4,5)
 (4,5) to[R, l_=$R_4$](7,5)
-(7,7) to[R, l_=$R_{10}$](10,6)
+(7,7) to[R, -*,l_=$R_{A}$](10,6)
 (4,7) -- (4,5)
-(7,5) to[R, l_=$R_{20}$](10,6)
-(10,6) to[R, l_=$R_{30}$](13,6)
+(7,5) to[R, l_=$R_{B}$](10,6)
+(10,6) to[R, l_=$R_{C}$](13,6)
 (13,6) -- (13,0)
 (13,0) -- (0,0)
 ;
@@ -105,4 +86,119 @@
 \end{circuitikz}
 \centering
 \caption{Úprava na hvězdu}
+
+\begin{gather*}
+    R_A = \frac{R_5 \times R_{68}}{R_5+R_{68}+R_7} \\
+    R_A = \frac{360 \times 940}{360+940+310} \\
+    R_A = 210.1863 \si\ohm \\
+    \\
+    R_B = \frac{R_5 \times R_7}{R_5+R_{68}+R_7} \\
+    R_B = \frac{360 \times 310}{360+940+310} \\
+    R_B = 69.3168 \si\ohm \\
+    \\
+    R_C = \frac{R_7 \times R_{68}}{R_5+R_{68}+R_7} \\
+    R_C = \frac{310 \times 940}{360+940+310} \\
+    R_C = 180.9938 \si\ohm \\
+\end{gather*}
+
 \end{figure}
+
+\begin{figure}[h!]
+    \begin{circuitikz} \draw
+    
+    (0,7) to[dcvsource, v_=$U_1$](0,3)
+    (0,3) to[dcvsource, v_=$U_2$](0,0)
+    (0,7) -- (1,7)
+    (1,7) to[R ,l_=$R_1$](4,7)
+    (4,7) to[R, *-*, l_=$R_{A23}$](7,7)
+    (4,5) to[R, l_=$R_{B4}$](7,5)
+    (4,7) -- (4,5)
+    (7,5) -- (7,7)
+    (7,7) to[R, l_=$R_{C}$](10,7)
+    (10,7) -- (10,0)
+    (10,0) -- (0,0)
+    ;
+    
+\end{circuitikz}
+\centering
+\caption{Zjednodušení $R_A$ a $R_B$}
+    
+\begin{gather*}
+    R_{A23} = R_A + R_{23} \\
+    R_{A23} = 210.1863 + 251.4151 \\
+    R_{A23} = 461.6014 \\
+    \\
+    R_{B4} = R_B + R_4 \\
+    R_{B4} = 69.3168 + 130 \\
+    R_{B4} = 199.9938 \si\ohm  \\
+\end{gather*}
+
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{circuitikz} \draw
+    
+    (0,4) to[dcvsource, v_=$U_1$](0,2)
+    (0,2) to[dcvsource, v_=$U_2$](0,0)
+    (0,4) to[R ,l_=$R_1$](3,4)
+    (3,4) to[R, l_=$R_{A23B4}$](6,4)
+    (6,4) to[R, l_=$R_{C}$](9,4)
+    (9,4) -- (9,0)
+    (9,0) -- (0,0)
+    ;
+    
+\end{circuitikz}
+\centering
+\caption{Zjednodušení $R_{A23}$ a $R_{B4}$}
+    
+\begin{gather*}
+    R_{A23B4} = \frac{R_{A23} \times R_{B4}}{R_{A23} + R_{B4}}  \\
+    R_{A23B4} = \frac{461.6014 \times 199.9938}{461.6014 + 199.9938}  \\
+    R_{A23B4} = 139.2077 \\
+\end{gather*}
+
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{circuitikz} \draw
+    
+    (0,4) to[dcvsource, v_=$U_1$](0,2)
+    (0,2) to[dcvsource, v_=$U_2$](0,0)
+    (0,4) to[R, l_=$R_{1A23B4C}$](5,4)
+    (5,4) -- (5,0)
+    (5,0) -- (0,0)
+    ;
+    
+\end{circuitikz}
+\centering
+\caption{Zjednodušení $R_1$, $R_{A23B4}$ a $R_C$}
+    
+\begin{gather*}
+    R = R_1 + R_{A23B4} + R_C \\
+    R = 350 + 139.2077 + 180.9938 \\
+    R = 6.7020 \si\ohm 
+\end{gather*}
+
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{circuitikz} \draw
+    
+    (0,4) to[dcvsource, v_=$U_1$](0,2)
+    (0,2) to[dcvsource, v_=$U_2$](0,0)
+    (0,4) to[R, l_=$R$](5,4)
+    (5,4) -- (5,0)
+    (5,0) -- (0,0)
+    ;
+    
+\end{circuitikz}
+\centering
+\caption{Výsledný obvod}
+
+\end{figure}
+
+
+\clearpage
+\subsection{Řešení}
+
+\clearpage
