--- a/00-projekt.tex
+++ b/00-projekt.tex
@@ -1,5 +1,5 @@
 %%%%% Projekt z předmětu IEL %%%% 
-%% Autor: (doplňte)
+%% Autor: (Vojtěch Šišma - xsisma02)
 
 \documentclass[]{fitiel} % dokumenty v češtině, implicitní
 % \documentclass[slovak]{fitiel} % odkomentujte pro dokumenty ve slovenštině
