--- a/06-tab.tex
+++ b/06-tab.tex
@@ -1,7 +1,7 @@
 \section{Shrnutí výsledků}
     \begin{tabular}{|c|c|c|} \hline 
         \textbf{Příklad} & \textbf{Skupina} & \textbf{Výsledky} \\ \hline
-        1 & \prvniSkupina & $U_{R2} = $ \qquad \qquad $I_{R2} = $ \\ \hline
+        1 & \prvniSkupina & $U_{R2} = 22.6262 \: V $ \qquad \qquad $I_{R2} = 0.0348 \: A $ \\ \hline
         2 & \druhySkupina & $U_{R5} = $ \qquad \qquad $I_{R5} = $ \\ \hline
         3 & \tretiSkupina & $U_{R4} = $ \qquad \qquad $I_{R4} = $\\ \hline
         4 & \ctvrtySkupina & $|U_{C_{2}}| = $ \qquad \qquad $\varphi_{C_{2}} = $ \\ \hline
