--- a/03-pr3.tex
+++ b/03-pr3.tex
@@ -1,3 +1,221 @@
 \section{Příklad 3}
 % Jako parametr zadejte skupinu (A-H)
 \tretiZadani{D}
+
+\begin{figure}[h!]
+    \begin{circuitikz}[american currents, european voltages]
+    \draw
+    (0,0) to[isource] (0,4)
+    (-0.75,1.5) node[label=$I$] {}
+    (0,4) -- (3,4)
+    (1.5,4) to[R , *-* ,l_=$R_1$](1.5,0)
+    (3,4) to[R , *-* ,l_=$R_3$](3,0)
+    (3,4) to[R ,l_=$R_2$](6,4)
+    to[short,i^=\footnotesize{$I_{R4}$}] (6,3)
+    (6,4) to[R , *-* ,l_=$R_4$, v^=$U_{R4}$](6,0)
+    (6,4) -- (7.75,4)
+    (7.75,4) to[isource] (7.75,0)
+    (8.5,1.5) node[label=$I_2$] {}
+    (6,0) -- (7.75,0)
+    (0,0) -- (3,0)
+    (3,0) to[R ,l_=$R_5$](6,0)
+    (6,0) -- (6,-2)
+    (6,-2) to[isource] (3,-2)
+    (3,0) -- (3,-2)
+    (4.5,-3.25) node[label=$I_1$] {}
+
+
+    (6,4.5) to[open, v^=\footnotesize{$U_B$}] (3,-0.5)
+    (3.1,4.5) to[open, v^=\footnotesize{$U_A$}] (3.1,-0.5)
+    ;
+    
+    \end{circuitikz}
+    \centering
+    \caption{Převod napěťového zdroje na proudový}
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{gather*}
+        I = \frac{U}{R_1} \\
+        I = \frac{115}{50} = 2.3 \:A \\
+    \end{gather*}
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{circuitikz}[american currents, european voltages]
+    \draw
+    (0,0) to[isource] (0,4)
+    (-0.75,1.5) node[label=$I$] {}
+    (0,4) -- (3,4)
+    (1.5,4) to[R , *-* ,l_=$G_1$](1.5,0)
+    (3,4) to[R , *-* ,l_=$G_3$](3,0)
+    (3,4) to[R ,l_=$G_2$](6,4)
+    to[short,i^=\footnotesize{$I_{R4}$}] (6,3)
+    (6,4) to[R , *-* ,l_=$G_4$, v^=$U_{R4}$](6,0)
+    (6,4) -- (7.75,4)
+    (7.75,4) to[isource] (7.75,0)
+    (8.5,1.5) node[label=$I_2$] {}
+    (6,0) -- (7.75,0)
+    (0,0) -- (3,0)
+    (3,0) to[R ,l_=$G_5$](6,0)
+    (6,0) -- (6,-2)
+    (6,-2) to[isource] (3,-2)
+    (3,0) -- (3,-2)
+    (4.5,-3.25) node[label=$I_1$] {}
+
+
+    (6,4.5) to[open, v^=\footnotesize{$U_B$}] (3,-0.5)
+    (3.1,4.5) to[open, v^=\footnotesize{$U_A$}] (3.1,-0.5)
+
+
+    (3,4) node[label={[color=red]above:A}] {}
+    (6,4) node[label={[color=red]above:B}] {}
+    (6.25,0) node[label={[color=red]below:C}] {};
+    ;
+    
+    \end{circuitikz}
+    \centering
+    \caption{Převod odporů na vodivosti}
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{gather*}
+        G_{1} = \frac{1}{R_{1}} \quad\quad G_{1} = \frac{1}{50} \:S \\
+        G_{2} = \frac{1}{R_{2}} \quad\quad G_{2} = \frac{1}{38} \:S \\
+        G_{3} = \frac{1}{R_{3}} \quad\quad G_{3} = \frac{1}{48} \:S \\
+        G_{4} = \frac{1}{R_{4}} \quad\quad G_{4} = \frac{1}{37} \:S \\
+        G_{5} = \frac{1}{R_{5}} \quad\quad G_{5} = \frac{1}{28} \:S \\
+    \end{gather*}
+\end{figure}
+
+\begin{figure}[h!]
+    \subsection{Sestavení rovnic}
+    \begin{gather*}
+        U_A (G_1 + G_2 + G_3) + U_B (-G_2) + 0 = I \\
+        U_A (-G_2) + U_B (G_2 + G_4) + U_C (-G_4) = -I_2 \\
+        0 + U_B (-G_4) + U_C (G_4 + G_5) = I_2 - I_1 \\
+    \end{gather*}
+\end{figure}
+
+\begin{figure}[h!]
+    \subsection{Sestavení do matice}
+    \begin{gather*}
+        \begin{pmatrix}
+            G_1 + G_2 + G_3 & -G_2 & 0 \\
+            -G_2 &  G_2 + G_4 & -G_4  \\
+            0 & -G_4 & G_4 + G_5 \\
+        \end{pmatrix}
+        \times
+        \begin{pmatrix}
+            U_A \\
+            U_B \\
+            U_C
+        \end{pmatrix}
+        =
+        \begin{pmatrix}
+            I \\
+            -I_2 \\
+            I_2 - I_1
+        \end{pmatrix}
+    \end{gather*}
+\end{figure}
+
+\begin{figure}[h!]
+    \subsection{Dosazení do matice}
+    \begin{gather*}
+        \begin{pmatrix}
+            \frac{1}{50} + \frac{1}{38} + \frac{1}{48} & -\frac{1}{38} & 0 \\
+            -\frac{1}{38} &  \frac{1}{38} + \frac{1}{37} & -\frac{1}{37}  \\
+            0 & -\frac{1}{37} & \frac{1}{37} + \frac{1}{28} \\
+        \end{pmatrix}
+        \times
+        \begin{pmatrix}
+            U_A \\
+            U_B \\
+            U_C
+        \end{pmatrix}
+        =
+        \begin{pmatrix}
+            2.3 \\
+            -0.9 \\
+            0.9 - 0.6
+        \end{pmatrix}
+    \end{gather*}
+\end{figure}
+
+\begin{figure}[h!]
+    \subsection{Výpočet determinantů}
+    \begin{gather*}
+        D = 
+        \begin{vmatrix}
+            \frac{1}{50} + \frac{1}{38} + \frac{1}{48} & -\frac{1}{38} & 0 \\
+            -\frac{1}{38} &  \frac{1}{38} + \frac{1}{37} & -\frac{1}{37}  \\
+            0 & -\frac{1}{37} & \frac{1}{37} + \frac{1}{28} \\
+        \end{vmatrix}
+        = 0.000132235148682517
+    \end{gather*}
+    \begin{gather*}
+        D_{U_{A}} =
+        \begin{vmatrix}
+            2.3 & -0.9 & 0.9-0.6 \\
+            -\frac{1}{38} &  \frac{1}{38} + \frac{1}{37} & -\frac{1}{37}  \\
+            0 & -\frac{1}{37} & \frac{1}{37} + \frac{1}{28} \\
+        \end{vmatrix}
+        = 0.00474497053444422
+    \end{gather*}
+    \begin{gather*}
+        D_{U_{B}} =
+        \begin{vmatrix}
+            \frac{1}{50} + \frac{1}{38} + \frac{1}{48} & -\frac{1}{38} & 0 \\
+            2.3 & -0.9 & 0.9-0.6 \\
+            0 & -\frac{1}{37} & \frac{1}{37} + \frac{1}{28} \\
+        \end{vmatrix}
+        = 0.000550231152204836
+    \end{gather*}
+    \begin{gather*}
+        D_{U_{C}} =
+        \begin{vmatrix}
+            \frac{1}{50} + \frac{1}{38} + \frac{1}{48} & -\frac{1}{38} & 0 \\
+            -\frac{1}{38} &  \frac{1}{38} + \frac{1}{37} & -\frac{1}{37}  \\
+            2.3 & -0.9 & 0.9-0.6 \\
+        \end{vmatrix}
+        = 0.0008693100996
+    \end{gather*}
+\end{figure}
+
+\begin{figure}[h!]
+    \subsection{Výpočet napětí}
+    \begin{gather*}
+        U_A = \frac{D_{U_{A}}}{D} \\
+        U_A = \frac{0.00424710424710425}{0.00013223514} \\
+        U_A = 35.8828237554026 \: V \\
+    \end{gather*}
+    \begin{gather*}
+        U_B = \frac{D_{U_{B}}}{D} \\
+        U_B = \frac{-0.0007201576577}{0.00013223514} \\
+        U_B = 4.161005282535612 \: V \\
+    \end{gather*}
+    \begin{gather*}
+        U_C = \frac{D_{U_{C}}}{D} \\
+        U_C = \frac{-0.001153271692745}{0.00013223514} \\
+        U_C = 6.573971506323034 \: V \\
+    \end{gather*}
+\end{figure}
+
+\begin{figure}[h!]
+    \subsection{Výpočet $U_{R4}$ a $I_{R4}$}
+    \begin{gather*}
+        U_{R4} + U_C - U_B = 0 \\
+        U_{R4} = U_B - U_C \\
+        U_{R4} = -5.446038098287183 - (-8.721370257723710) \\
+        U_{R4} \doteq -2.4130 \: V
+    \end{gather*}
+
+    \begin{gather*}
+        I_{R4} = \frac{U_{R4}}{R_4} \\
+        I_{R4} = \frac{3.2753}{37} \\
+        I_{R4} \doteq -0.0652 \: A
+    \end{gather*}
+\end{figure}
+
+\clearpage
