add all files, mising pr5

--- a/01-pr1.tex
+++ b/01-pr1.tex
@@ -284,6 +284,8 @@
     \end{gather*}
 \end{figure}
 
+% \subsection{Výpočet $I_{R2}$}
+
 \begin{figure}[t]
     \begin{gather*}
         I_{R2} = \frac{U_{23}}{R_2} \\
@@ -298,8 +300,5 @@
         U_{R2} \doteq \underline{\underline{22.6262 \: V}} \\
     \end{gather*}
 \end{figure}
-
-\clearpage
-\subsection{Řešení}
 
 \clearpage
