--- a/06-tab.tex
+++ b/06-tab.tex
@@ -2,8 +2,8 @@
     \begin{tabular}{|c|c|c|} \hline 
         \textbf{Příklad} & \textbf{Skupina} & \textbf{Výsledky} \\ \hline
         1 & \prvniSkupina & $U_{R2} = 22.6262 \: V $ \qquad \qquad $I_{R2} = 0.0348 \: A $ \\ \hline
-        2 & \druhySkupina & $U_{R5} = $ \qquad \qquad $I_{R5} = $ \\ \hline
-        3 & \tretiSkupina & $U_{R4} = $ \qquad \qquad $I_{R4} = $\\ \hline
-        4 & \ctvrtySkupina & $|U_{C_{2}}| = $ \qquad \qquad $\varphi_{C_{2}} = $ \\ \hline
+        2 & \druhySkupina & $U_{R5} = 18.205 \: V $ \qquad \qquad $I_{R5} = 0.0331 \: A $ \\ \hline
+        3 & \tretiSkupina & $U_{R4} = -2.4130 \: V $ \qquad \qquad $I_{R4} = -0.0652 \: A $\\ \hline
+        4 & \ctvrtySkupina & $|U_{C_{2}}| = 6.8804 \: V $ \qquad \qquad $\varphi_{C_{2}} = 2.962 \: rad \: (\ang{169;42;}) $ \\ \hline
         5 & \patySkupina & $i_L = $ \\ \hline
     \end{tabular}
