--- a/04-pr4.tex
+++ b/04-pr4.tex
@@ -1,3 +1,149 @@
 \section{Příklad 4}
 % Jako parametr zadejte skupinu (A-H)
 \ctvrtyZadani{A}
+
+\subsection{Sestavení rovnic pro smyčky $I_A$, $I_B$, $I_C$}
+\begin{figure}[h!]
+    \begin{circuitikz}[american currents, european voltages]
+    \draw
+    (0,3) to[sinusoidal voltage source, v_=$U_1$] (9,3)
+    (9,3) -- (9,0)
+    (0,3) to[R, -*, l_=$R_1$](0,0)
+    (0,0) to[cute inductor, l_=$L_1$] (3,0)
+    (3,0) to[R, -*, l_=$R_2$](6,0)
+    (6,0) to[cute inductor, l_=$L_2$] (9,0)
+    (6,0) to[capacitor, *-*,l_=$C_1$](6,-3)
+    (6,-3) to[capacitor, *-,l_=$C_2$](0,-3)
+    (3,-4) node[flowarrow]{$U_{C_2}$}
+    (0,-3) -- (0,0)
+    (9,-3) to[sinusoidal voltage source, v_=$U_2$] (6,-3)
+    (9,-3) -- (9,0)    
+    ;
+
+    \draw[->]   (4,1) arc(220:  -40:5mm) node[at start, right,font=\footnotesize] {$I_A$};
+    \draw[->]   (3,-1.5) arc(220:  -40:5mm) node[at start, right,font=\footnotesize] {$I_B$};
+    \draw[->]   (7,-1.5) arc(220:  -40:5mm) node[at start, right,font=\footnotesize] {$I_C$};
+    
+    \end{circuitikz}
+    \centering
+    \caption{}
+\end{figure}
+
+\begin{figure}[h!]
+    \begin{gather*}
+        I_A: (Z_{L2} + Z_{L1} + R_2 + R_1)I_A - (Z_{L1} + R_2)I_B - Z_{L2}I_C = -U_1\\
+        I_B: - (Z_{L1} + R_2)I_A + (Z_{C1} + Z_{C2} + Z_{L1} + R_2)I_B - Z_{C1}I_C = 0 \\ 
+        I_C: - Z_{L2}I_A - Z_{C1}I_B + (Z_{C1} + Z_{L2})I_C = -U_2 
+   \end{gather*}
+   \subsection*{Sestavení matice}
+   \begin{gather*}
+        \begin{pmatrix}
+            Z_{L2} + Z_{L1} + R_2 + R_1 & - (Z_{L1} + R_2) & - Z_{L2} \\
+            - Z_{L1} + R_2 & Z_{C1} + Z_{C2} + Z_{L1} + R_2 & - Z_{C1} \\
+            - Z_{L2} & Z_{C1} & Z_{C1} + Z_{L2} \\
+        \end{pmatrix}
+        \times
+        \begin{pmatrix}
+            I_A \\
+            I_B \\
+            I_C \\
+        \end{pmatrix}
+        =
+        \begin{pmatrix}
+            - U_1 \\
+            0 \\
+            - U_2 \\
+        \end{pmatrix}
+   \end{gather*}
+\end{figure}
+\begin{figure}[h!]
+   \subsection*{Výpočet determinantů matic}
+   \begin{gather*}
+        \begin{vmatrix}
+            Z_{L2} + Z_{L1} + R_2 + R_1 & - (Z_{L1} + R_2) & - Z_{L2} \\
+            - Z_{L1} + R_2 & Z_{C1} + Z_{C2} + Z_{L1} + R_2 & - Z_{C1} \\
+            - Z_{L2} & Z_{C1} & Z_{C1} + Z_{L2} \\
+        \end{vmatrix}
+        \\
+        det(M) = 3.705664168344058e+03 + 3.192554193217782e+04i
+    \end{gather*}
+\end{figure}
+\begin{figure}[h!]
+    Nahrazení prvního sloupce matice vektorem výsledku
+    \begin{gather*}
+        \begin{vmatrix}
+            - U_1 & - (Z_{L1} + R_2) & - Z_{L2} \\
+            0 & Z_{C1} + Z_{C2} + Z_{L1} + R_2 & - Z_{C1} \\
+            - U_2 & Z_{C1} & Z_{C1} + Z_{L2} \\
+        \end{vmatrix}
+        \\
+        det(M_A) = -2890.09261418743 + 3652.77773609363i
+    \end{gather*}
+    \begin{gather*}
+        I_A = \frac{det(M_A)}{det(M)} \\
+        I_A = 0.1025 + 0.1024i \: A
+    \end{gather*}
+\end{figure}
+\begin{figure}[h!]
+    Nahrazení druhého sloupce matice vektorem výsledku
+    \begin{gather*}
+        \begin{vmatrix} 
+            Z_{L2} + Z_{L1} + R_2 + R_1 & - U_1 & - Z_{L2} \\
+            - Z_{L1} + R_2 & 0 & - Z_{C1} \\
+            - Z_{L2} & -U_2 & Z_{C1} + Z_{L2} \\
+        \end{vmatrix}
+        \\
+        det(M_B) = -9770.64764108973 + 2970.68512284265i
+    \end{gather*}
+    \begin{gather*}
+        I_B = \frac{det(M_B)}{det(M)} \\
+        I_B = 0.0568 + 0.3126i \: A
+    \end{gather*}
+\end{figure}
+\begin{figure}[h!]
+    Nahrazení třetího sloupce matice vektorem výsledku
+    \begin{gather*}
+        \begin{vmatrix}
+            Z_{L2} + Z_{L1} + R_2 + R_1 & - (Z_{L1} + R_2) & - U_1 \\
+            - Z_{L1} + R_2 & Z_{C1} + Z_{C2} + Z_{L1} + R_2 & 0 \\
+            - Z_{L2} & Z_{C1} & - U_2 \\
+        \end{vmatrix}
+        \\
+        det(M_C) = 4402.68569224360 + 3322.42512964125i
+    \end{gather*}
+    \begin{gather*}
+        I_C = \frac{det(M_C)}{det(M)} \\
+        I_C = 0.1185 - 0.1242i \: A
+    \end{gather*}
+\end{figure}
+\begin{figure}[h!]
+    \subsection*{Dopočítání výsledků}
+    \begin{gather*}
+        I_{C2} = I_B = 0.0568 + 0.3126i \\
+        U_{C2} = I_{C2} \times Z_{C2} \\ 
+        U_{C2} = 6.7697 - 1.2291i \: V
+    \end{gather*}
+\end{figure}
+Výpočet amplitudy $|U_{C2}|$
+\begin{figure}[h!]
+    \begin{gather*}
+        |U_{C2}| = \sqrt{Re(U_{C2}) + Im(U_{C2})} \\
+        |U_{C2}| = \sqrt{6.7697^2 + (- 1.2291)^2} \\
+        |U_{C2}| = 6.8804 \: V
+    \end{gather*}
+\end{figure}
+Výpočet odchylky $\phi_{C2}$
+\begin{figure}[h!]
+    \begin{gather*}
+       \varphi_{C2} = \arctan(\frac{Im(U_{C2})}{Re(U_{C2})}) \\
+       \varphi_{C2} = -0.179605726478335 \: rad
+    \end{gather*}
+    $\varphi_{C2}$ je v druhém kvadrantu $\rightarrow$ musíme přičíst $\pi$ 
+    \begin{gather*}
+        \varphi_{C2} = 2.96198692711146 + \pi \\
+        \varphi_{C2} = 2.962 \: rad \\
+        \varphi_{C2} = \ang{169;42;}
+     \end{gather*}
+\end{figure}
+
+\clearpage
